Added glide, recyclerview library and implemented a basic layout and used recycler view for showing  chuck jokes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,12 @@ dependencies {
     // gson
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    // recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 }
